--- a/src/HomePage/HomePageApp.css
+++ b/src/HomePage/HomePageApp.css
@@ -7,9 +7,19 @@
   .main-content {
     display: flex;
     justify-content: space-between;
-    width: 800px; 
+    width: 1500px; 
     margin-top: 20px; 
   }
   
   .left-content {
     width: 600px; }
+    /* HomePageApp.css */
+
+.dark-mode {
+  /* Add styles for dark mode */
+  background-color: #2f2c2c; /* Dark background color */
+  color: #fff; /* Light text color */
+
+}
+
+/* Add any other dark mode styles */
