--- a/src/HomePage/components/Header.css
+++ b/src/HomePage/components/Header.css
@@ -31,3 +31,35 @@ sec-menu ul li:hover {
 sec-menu ul li:hover {
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
+/* Header.css */
+
+header {
+    /* Add styles similar to Facebook header */
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 20px;
+    background-color: #4267b2; /* Facebook blue */
+  }
+  
+  .logo {
+    font-size: 24px;
+    font-weight: bold;
+    color: #fff;
+  }
+  
+  .sec-menu {
+    ul {
+      list-style-type: none;
+      margin: 0;
+      padding: 0;
+      display: flex;
+    }
+  
+    li {
+      margin-right: 20px;
+      color: #fff;
+      cursor: pointer;
+    }
+  }
+  
