--- a/src/HomePage/components/PostContainer.css
+++ b/src/HomePage/components/PostContainer.css
@@ -2,10 +2,10 @@
 .posts-container {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: right;
   }
   .post-image {
-    max-width: 100%; /* Ensure the image doesn't exceed the container width */
-    height: auto; /* Maintain aspect ratio */
-    margin-top: 10px; /* Add some margin for separation */
+    max-width: 100%; 
+    height: auto; 
+    margin-top: 10px; 
   }
