--- a/src/HomePage/components/PostItem.css
+++ b/src/HomePage/components/PostItem.css
@@ -1,4 +1,5 @@
 .post {
+  margin-left: 100px;
   border: 1px solid #ddd;
   border-radius: 8px;
   margin-bottom: 30px; /* Increase margin bottom */
