--- a/src/HomePage/components/Rightmenu.css
+++ b/src/HomePage/components/Rightmenu.css
@@ -42,3 +42,9 @@
   .right-menu.dark-mode li {
     color: #a09bab; 
   }
+  .profile-picture-user {
+    width: 100px; 
+    height: 100px; 
+    border-radius: 50%; 
+  } 
+ 
