--- a/src/HomePage/HomePageApp.css
+++ b/src/HomePage/HomePageApp.css
@@ -46,13 +46,13 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
+  background-color: rgba(0, 0, 0, 0.5); 
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
 .expanded-profile-image {
-  max-width: 80%; /* Adjust the size of the profile image as needed */
+  max-width: 80%; 
   max-height: 80%;
 }
