--- a/src/HomePage/components/Rightmenu.css
+++ b/src/HomePage/components/Rightmenu.css
@@ -21,7 +21,8 @@
 }
 .right-menu ul li {
     margin-bottom: 10px;
-    height: 150px;
+    height: 200px;
+    margin-bottom:10px;
     font-size: 25px;
     color: #2f2424;
     cursor: pointer;
@@ -33,7 +34,7 @@
   
   .mode-toggle {
     margin-top: 20px;
-    padding: 10px 20px;
+    padding: 10px 10px;
     background-color: #1877f2; 
     color: #fff;
     border: none;
