--- a/src/HomePage/components/Rightmenu.css
+++ b/src/HomePage/components/Rightmenu.css
@@ -61,9 +61,13 @@
   }
 
   button {
-    background-color: #1877f2;
+    background-color: #5b91d8;
     color: #fff;
     cursor: pointer;
+    padding: 3px 5px; 
+	 border-radius: 3px;
+	  cursor: pointer;
+	  font-size: 10px;
   }
   
   button:hover {
