--- a/src/HomePage/components/Share.css
+++ b/src/HomePage/components/Share.css
@@ -17,14 +17,23 @@
   }
   
   .share button {
-    padding: 10px 5px;
-    background-color: #4267b2;
-    color: #fff;
-    border: none;
-    cursor: pointer;
-    border-radius: 8px;
-    font-size: 16px;
-  }
+      background-color: #5b91d8;
+      color: #fff;
+      cursor: pointer;
+      padding: 10px 20px; 
+     border-radius: 3px;
+      cursor: pointer;
+      font-size: 15px;
+    }
+    
+    button:hover {
+      background-color: #166fe5;
+    }
+    
+    .link:hover {
+      text-decoration: underline;
+    }
+  
 
   .share.dark-mode textarea {
     color: #e6e1e1; /* White text color */
