add the option to see the list of the friends of the user!

--- a/src/HomePage/components/PostItem.css
+++ b/src/HomePage/components/PostItem.css
@@ -90,7 +90,7 @@
 .like-button {
   background-color: transparent;
   border: none;
-  color: #0e4c9e;
+  color: #006efe;
   cursor: pointer;
   font-weight: bold;
   margin-right: 8px;
