--- a/src/HomePage/HomePageApp.css
+++ b/src/HomePage/HomePageApp.css
@@ -1,58 +1,135 @@
+/* General Styling */
+body, html {
+  margin: 0;
+  padding: 0;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  background-color: #f9fbfc;
+
+}
+
 .home-page {
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: #f0f2f5;
-  font-family: Arial, sans-serif;
-}
-
-
-.main-content {
-  display: flex;
-  justify-content: center;
+  background-color: #ffffff;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  margin: 1px;
+  border-radius: 8px;
   width: 100%;
-  width: 1200px; 
-  margin-top: 20px;
+  max-width: 1500px;
+  padding: 150px 60px;
+  top: 0;
+  left: 0;
 }
 
+/* Welcome Message */
+.welcome-message {
+  font-size: 31px;
+  color: #1877f2;
+  font-weight: bold;
+}
+
+/* Main Content */
+.main-content {
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: space-between;
+  width: 120%;
+
+}
+
+/* Left Content */
 .left-content {
   width: 70%;
   margin-right: 20px;
+  background-color: #ffffff;
+  padding: 5px;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
-
+/* Dark Mode */
 .dark-mode {
-  background-color: #18191a;
+  background-color: #242526;
   color: #ffffff;
 }
 
-.search {
-  margin-top: 10px;
-  width: 100%;
-  display: flex;
-  justify-content: center;
+.dark-mode .left-content, 
+.dark-mode .rightmenu {
+  background-color: #3a3b3c;
 }
 
-.welcome-message {
-  font-size: 24px;
-  color: #206dd1;
-  margin-top: 20px;
-  text-align: center;
-  font-family: Arial, sans-serif;
+.dark-mode .welcome-message {
+  color: #e4e6eb;
 }
+
+.dark-mode .expanded-profile-view {
+  background-color: rgba(0, 0, 0, 0.7);
+}
+
+/* Search */
+.search {
+  margin-top: 20px;
+  width: 60%;
+  display: flex;
+  justify-content: center;
+
+}
+
+/* Expanded Profile View */
 .expanded-profile-view {
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5); 
+  background-color: rgba(0, 0, 0, 0.5);
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
 .expanded-profile-image {
-  max-width: 80%; 
-  max-height: 80%;
+  max-width: 5000px;
+  max-height: 500px;
+  border-radius: 50%;
+  box-shadow: 0 4px 0px rgba(0, 0, 0, 0.2);
+}
+
+/* Right Menu */
+.rightmenu {
+  width: 28%;
+  background-color: #ffffff;
+  padding: 2px;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.rightmenu img {
+  border-radius: 50%;
+  margin-bottom: 10px;
+}
+
+.rightmenu h3 {
+  font-size: 22px;
+  color: #333;
+  margin-bottom: 10px;
+  text-align: center;
+}
+
+.rightmenu button {
+  width: 100%;
+  padding: 10px;
+  margin: 10px 0;
+  background-color: #1877f2;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.rightmenu button:hover {
+  background-color: #165db7;
 }
