--- a/src/HomePage/components/PostContainer.css
+++ b/src/HomePage/components/PostContainer.css
@@ -1,12 +1,16 @@
 
 .posts-container {
     display: flex;
-    flex-direction: column;
+    flex-direction: column-reverse; 
     align-items: right;
+   
+
     
   }
   .post-image {
     max-width: 100%; 
     height: auto; 
     margin-top: 10px; 
+    display: flex;
+
   }
