--- a/src/HomePage/components/PostItem.css
+++ b/src/HomePage/components/PostItem.css
@@ -1,13 +1,19 @@
 .post {
-  margin-left: 100px;
+  margin: 20px auto;
   border: 1px solid #ddd;
-  border-radius: 8px;
-  margin-bottom: 30px; 
-  padding: 20px;
+  border-radius: 12px;
   background-color: #fff;
-  display: center;
-  flex-direction: column; 
-  align-items: center;
+  padding: 20px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  width: 100%;
+  max-width: 600px;
+  transition: box-shadow 0.3s ease-in-out;
+}
+.post:hover {
+  box-shadow: 0 10px 122px rgba(0, 0, 0, 0.2);
+}
+.dark-mode .post:hover {
+  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.4);
 }
 .post-image {
   width: 400px;
@@ -81,9 +87,11 @@
   margin-right: 5px;
 }
 .profile-picture {
-  width: 30px; 
-  height: 30px; 
-  border-radius: 50%; 
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  margin-right: 10px;
+  border: 3px solid #076ff7; 
 }
 
 
@@ -136,11 +144,41 @@
   margin-left: 8px;
 }
 .post-info {
-
-  cursor: pointer; 
+ 
+    
+    align-items: center;
+    margin-bottom: 10px;
+  
+}
+/* Friend Request Section */
+.send-request-button, .already-sent {
+  background-color: #1877f2;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  padding: 6px 12px;
+  cursor: pointer;
+  font-weight: bold;
+  transition: background-color 0.3s ease-in-out;
+  display: block;
+  margin-top: 10px;
+  text-align: center;
+}
+.author {
+  font-weight: bolder;
+  font-size: 17px;
+  cursor: pointer;
+  color: #000408;
 }
 
 .author:hover {
   text-decoration: underline;
-  color: blue;
+  color: #0056b3;
+}.send-request-button:hover {
+  background-color: #0056b3;
+}
+
+.already-sent {
+  background-color: #ccc;
+  color: #333;
 }
